<resources>
    <string name="app_name">Cereri Cobalt</string>

    <string name="leave_request_application">Cerere învoire</string>
    <string name="paid_leave_application">Cerere concediu de odihnă</string>

    <string name="leave_request">Cerere învoire</string>
    <string name="paid_leave">Cerere concediu</string>

    <string name="nume">Nume: </string>
    <string name="prenume">Prenume: </string>
    <string name="functia">Funcția: </string>
    <string name="start_date">Începând cu data: </string>
    <string name="end_date">Până la data: </string>
    <string name="completion_date">Data întocmirii: </string>

    <string name="date">Data: </string>
    <string name="start_time">Începând cu ora: </string>
    <string name="end_time">Până la ora: </string>
    <string name="requestReason">Motivul cererii: </string>
    <string name="recuperation">Recuperez aceste ore, după programul: </string>

    <string name="add_signature">Adaugă semnătură</string>
    <string name="save_signature">Salvează semnătura</string>
    <string name="draw_signature">Desenează semnătura în chenar</string>

    <string name="send_application">Trimite cererea</string>
    <string name="fill_date">Data întocmirii</string>
    <string name="clear">Resetează</string>

</resources>