<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    android:paddingTop="80dp"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/draw_signature"
        android:textSize="24dp"/>

    <com.example.cerericobalt.draw.DrawView
        android:id="@+id/drawView"
        android:layout_width="match_parent"
        android:layout_height="500px"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/editable_field_background" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:layout_marginHorizontal="60dp"
        android:layout_below="@id/drawView"
        android:background="@drawable/button_bg"
        android:backgroundTint="@color/grey"
        android:textColor="@color/colorPrimary"
        android:text="@string/clear" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:background="@drawable/button_bg"
        android:textColor="@color/white"
        android:text="@string/save_signature" />

</RelativeLayout>