<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="40dp">

            <LinearLayout
                android:id="@+id/nameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nume"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/editable_field_background"
                    android:focusableInTouchMode="true"
                    android:padding="6dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/employeeFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:inputType="text"
                        android:textColor="@color/colorPrimary"
                        android:imeOptions="actionNext"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lastNameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prenume"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/editable_field_background"
                    android:focusableInTouchMode="true"
                    android:padding="6dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/employeeLastName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:imeOptions="actionNext"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/positionField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/functia"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/editable_field_background"
                    android:focusableInTouchMode="true"
                    android:padding="6dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/employeeFunction"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:textColor="@color/colorPrimary"
                        android:imeOptions="actionNext"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/paidLeave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
                <LinearLayout
                    android:id="@+id/startDateField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/start_date"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/editable_field_background"
                        android:focusableInTouchMode="true"
                        android:padding="6dp">
                        <TextView
                            android:id="@+id/startDate"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:textColor="@color/colorPrimary"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/endDateField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/end_date"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/editable_field_background"
                        android:focusableInTouchMode="true"
                        android:padding="6dp">
                        <TextView
                            android:id="@+id/endDate"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:gravity="center_vertical"
                            android:inputType="textMultiLine"
                            android:textColor="@color/colorPrimary"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/leaveRequest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
                <LinearLayout
                    android:id="@+id/leaveDateField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/editable_field_background"
                        android:focusableInTouchMode="true"
                        android:padding="6dp">
                        <TextView
                            android:id="@+id/leaveDate"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:textColor="@color/colorPrimary"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/startTimeField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/start_time"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/editable_field_background"
                        android:focusableInTouchMode="true"
                        android:padding="6dp">
                        <TextView
                            android:id="@+id/startTime"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:gravity="center_vertical"
                            android:inputType="textMultiLine"
                            android:textColor="@color/colorPrimary"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/endTimeField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/end_time"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/editable_field_background"
                        android:focusableInTouchMode="true"
                        android:padding="6dp">
                        <TextView
                            android:id="@+id/endTime"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:gravity="center_vertical"
                            android:inputType="textMultiLine"
                            android:textColor="@color/colorPrimary"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/requestReasonField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/requestReason"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/editable_field_background"
                        android:focusableInTouchMode="true"
                        android:padding="6dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/requestReason"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:gravity="top"
                            android:inputType="textMultiLine"
                            android:imeOptions="actionNext"
                            android:textColor="@color/colorPrimary"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/recuperationPeriodField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/recuperation"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/editable_field_background"
                        android:focusableInTouchMode="true"
                        android:padding="6dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/recuperationPeriod"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:gravity="top"
                            android:inputType="textMultiLine"
                            android:textColor="@color/colorPrimary"
                            android:imeOptions="actionDone"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fillDateField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fill_date"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/editable_field_background"
                    android:focusableInTouchMode="true"
                    android:padding="6dp">
                    <TextView
                        android:id="@+id/fillDate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/signatureButton"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/button_bg"
                android:backgroundTint="@color/grey"
                android:text="@string/add_signature"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/convertButton"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/button_bg"
                android:text="@string/send_application"
                android:textColor="@color/white" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>